# traffic-simulation-platform

./: .commitlintrc.js  .env.example  .eslintrc.json  .gitconfig  .gitignore  CONTRIBUTING.md  DEPLOYMENT-COMPLETE.md  LICENSE  Makefile  README.md  SETUP-COMPLETE.md  docker-compose.override.yml  docker-compose.yml  test-campaign-controls.sh  test-connectivity.sh
.github/workflows/: ci.yml  pr.yml
backend/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_create_personas_table.py  002_create_campaigns_table.py  003_create_sessions_table.py  004_create_page_visits_table.py  005_create_actions_table.py  006_create_analytics_tables.py
backend/database/init.sql/: init-db.sql
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  analytics.py  campaign_metrics.py  campaigns.py  personas.py  sessions.py
backend/src/database/: connection.py
backend/src/middleware/: logging.py  security.py
backend/src/models/: __init__.py  action.py  analytics.py  base.py  campaign.py  campaign_analytics.py  page_visit.py  persona.py  session.py  session_analytics.py
backend/src/queue/: redis_client.py
backend/src/schemas/: __init__.py  analytics.py  campaign.py  persona.py  session.py
backend/src/services/: __init__.py  analytics_service.py  campaign_service.py  persona_service.py  session_service.py  simulation_orchestrator.py  visit_verification_service.py
backend/src/tests/unit/: test_campaign_target_url.py  test_persona_service.py
backend/src/websockets/: campaign_updates.py
backend/tests/contract/: test_actions_schema.py  test_analytics_get.py  test_campaign_schema.py  test_campaigns_get.py  test_campaigns_post.py  test_campaigns_start.py  test_page_visits_schema.py  test_persona_schema.py  test_personas_get.py  test_personas_post.py  test_personas_put.py  test_session_schema.py  test_sessions_get.py
backend/tests/integration/: test_campaign_workflow.py  test_persona_workflow.py
backend/tests/performance/: test_performance.py
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/services/: analytics.ts  api.ts  campaigns.ts  sessions.ts  websocket.ts
frontend/src/utils/: chartUtils.ts
k8s/: backend.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  simulation-workers.yaml
scripts/: deploy-production.sh  git-workflow.sh  health-check.sh  performance-test.sh  run-demo.sh  setup-dev.sh  start-all.sh  start-dev.sh  test-e2e.sh  test-platform.sh  test-real-navigation.sh
shared/: index.ts  package.json  tsconfig.json
shared/constants/: index.ts
shared/schemas/: index.ts
shared/tests/: package.json  schemas.test.ts  types.test.ts  utils.test.ts  vitest.config.ts
shared/types/: index.ts
shared/utils/: index.ts
simulation-workers/: .flake8  Dockerfile  pyproject.toml  requirements.txt
simulation-workers/src/: __init__.py  local_types.py
simulation-workers/src/core/: __init__.py  browser_manager.py  navigation_engine.py  simulation_engine.py
simulation-workers/src/models/: __init__.py  action.py  campaign.py  page_visit.py  persona.py  session.py
simulation-workers/src/services/: __init__.py  analytics_service.py  campaign_service.py  persona_service.py  session_service.py
simulation-workers/src/tests/unit/: test_playwright_navigation.py
simulation-workers/src/utils/: behavior_patterns.py  logger.py  redis_client.py  rhythm_calculator.py  user_agents.py
simulation-workers/src/workers/: simple_worker.py  simulation_worker.py
specs/001-traffic-simulation-platform/: data-model.md  design-system.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-traffic-simulation-platform/contracts/: api-schema.yaml
(+35 files in other folders)
