[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traffic-simulation-workers"
version = "1.0.0"
description = "Simulation workers for Traffic Simulation Platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Traffic Simulation Team"},
]
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.20",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "rq>=1.15.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "faker>=20.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]

[project.scripts]
simulation-cli = "src.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
